--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ header h2 {
   align-items: center;
   justify-content: space-between;
  flex-wrap: wrap;
+ gap: 10px;
 }
 .subtitle {
   font-size: 18px;
