--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,12 @@ header {
   background-color: #1a1a1a;
 }
  
+header .content-wrapper {
+  margin: 0;
+  padding: 0 40px;
+  max-width: 100%;
+}
+
 
 
 .symbol-left img,
