--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,16 @@ footer .content-wrapper {
   header h2 { font-size: 20px; }
   .subtitle { font-size: 16px; }
 
+  .search-bar {
+  width: 100%;
+  justify-content: center;
+}
+
+#searchInput {
+  max-width: 240px;
+  width: 100%;
+}
+
   nav ul {
     flex-direction: column;
     align-items: center;
