--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,6 +343,10 @@ footer .content-wrapper {
   width: 100%;
 }
 
+  .filters-search-wrapper {
+  flex-direction: column;
+  align-items: center;
+}
   nav ul {
     flex-direction: column;
     align-items: center;
