--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,19 +333,22 @@ footer .content-wrapper {
   header h2 { font-size: 20px; }
   .subtitle { font-size: 16px; }
 
-  .search-bar {
+  .filters-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.search-bar {
   width: 100%;
   justify-content: center;
+  display: flex;
 }
 
 #searchInput {
   max-width: 240px;
   width: 100%;
-}
-
-  .filters-search-wrapper {
-  flex-direction: column;
-  align-items: center;
 }
   nav ul {
     flex-direction: column;
