--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,19 @@ footer .content-wrapper {
   header h1 { font-size: 32px; }
   header h2 { font-size: 20px; }
   .subtitle { font-size: 16px; }
+/ Прапор — трохи відсуваємо /
+  .symbol-left img {
+    margin-right: 10px;
+    max-width: 50px;
+    height: auto;
+  }
 
+  / Герб — наближаємо до тексту /
+  .symbol-right img {
+    margin-left: 0;
+    max-width: 50px;
+    height: auto;
+  }
   .filters-bar {
   display: flex;
   flex-direction: column;
