--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,13 +390,21 @@ footer .content-wrapper {
 
   .symbol-left,
   .symbol-right {
-    margin: 10px 0;
+    margin: 0 5px; / невеликий горизонтальний відступ /
   }
 
-  .symbol-left img,
+  .symbol-left img {
+    max-height: 60px;
+    width: auto;
+    margin-top: -10px;   / трохи підняти /
+    margin-right: 10px;  / відсунути прапор від тексту /
+  }
+
   .symbol-right img {
-    height: 100px;
-    margin-top: 0;
+    max-height: 60px;
+    width: auto;
+    margin-top: -10px;   / щоб не «вивалювався» /
+    margin-left: 0;      / наблизити герб до тексту /
   }
  .hero-card {
   width: 100%;
