--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,14 +388,14 @@ footer .content-wrapper {
     align-items: center;
   }
 
- / Контейнери символів /
+ /* Контейнери символів */
   .symbol-left,
   .symbol-right {
     margin: 0 5px;       / невеликий горизонтальний відступ /
     flex: 0 0 auto;
   }
 
-  / Прапор /
+  /* Прапор */
   .symbol-left img {
     max-height: 60px;    / компактний прапор /
     width: auto;
@@ -403,7 +403,7 @@ footer .content-wrapper {
     margin-right: 10px;  / відсунути від тексту /
   }
 
-  / Герб /
+  /* Герб */
   .symbol-right img {
     max-height: 60px;    / компактний герб /
     width: auto;
