--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,6 +399,7 @@ footer .content-wrapper {
   .symbol-left img {
     max-height: 60px;    /* компактний прапор */
     width: auto;
+   margin-top: 10px;
     margin-right: 10px;  /* відсунути від тексту */
   }
 
@@ -406,6 +407,7 @@ footer .content-wrapper {
   .symbol-right img {
     max-height: 60px;    /* компактний герб */
     width: auto;
+   margin-top: 10px;
     margin-left: 0;      /* наблизити до тексту */
   }
   }
