--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ footer .content-wrapper {
     max-height: 60px;    /* компактний прапор */
     width: auto;
    margin-top: 20px;
-    margin-right: 10px;  /* відсунути від тексту */
+    margin-right: 0px;  /* відсунути від тексту */
   }
 
   /* Герб */
@@ -408,7 +408,7 @@ footer .content-wrapper {
     max-height: 60px;    /* компактний герб */
     width: auto;
    margin-top: 20px;
-    margin-left: 0;      /* наблизити до тексту */
+    margin-left: 10px;      /* наблизити до тексту */
   }
   
  
