--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,7 @@ footer .content-wrapper {
   }
 
   .header-inner {
+   display: flex;
     flex-direction: column;
     align-items: center;
    padding-top: 20px;
