--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ footer .content-wrapper {
   .symbol-left img {
     max-height: 60px;    /* компактний прапор */
     width: auto;
-   margin-top: 20px !important;
+   margin-bottom: 20px !important;
     margin-right: 0px;  /* відсунути від тексту */
   }
 
