--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,8 +385,8 @@ footer .content-wrapper {
 
   .header-inner {
    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
    padding-top: 20px;
   }
 
