--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,11 +396,10 @@ footer .content-wrapper {
   flex: 0 0 auto;
 }
 
-.symbol-left img,
+ .symbol-left img,
 .symbol-right img {
-  max-height: 60px;
-  width: auto;
-  display: block;
+ max-height: 60px; /* менші символи на мобільних */
+    width: auto;
 }
 
 .content-wrapper {
