--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,8 +387,8 @@ footer .content-wrapper {
   display: flex;
   align-items: center;   /* вирівнює по центру вертикально */
   justify-content: space-between;
-  gap: 20px;             /* відстань між елементами */
-  padding: 20px;
+  gap: 10px;             /* відстань між елементами */
+  padding: 10px;
 }
 
 .symbol-left,
@@ -402,7 +402,7 @@ footer .content-wrapper {
     width: auto;
 }
 
-header.content-wrapper {
+header-inner.content-wrapper {
  flex:1;
   text-align: center;
 }
