--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ footer .content-wrapper {
     width: auto;
 }
 
-header-inner.content-wrapper {
+.header-inner.content-wrapper {
  flex:1;
   text-align: center;
 }
