--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,7 +374,7 @@ footer .content-wrapper {
   .symbol-left img,
   .symbol-right img {
     height: 100px;
-    margin-top: 0;
+    margin-top: 10px;
   }
  .hero-card {
   width: 100%;
