--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,8 +195,8 @@ main .content-wrapper {
   height: 70vh;
   background-size: cover;
   background-position: center;
-  background-blend-mode:lighten;
-  opacity: 0.9;
+  background-blend-mode:multiply;
+  opacity: 1;
   z-index: 3;
   pointer-events: none; /* щоб не блокували кліки */
   filter:brightness(1.2);
